--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ disqus_shortname:   poulamimaitra
 #bing-verify:
 email: poulamimaitra91@gmail.com
 #twitter:            username
-facebook:           https://www.facebook.com/ForgivenessAndLove
-github-url:         https://www.github.com/poulamim91
+facebook:           ForgivenessAndLove
+github-url:         poulamim91
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           https://www.linkedin.com/in/poulami-maitra-60b67174/
+linkedin:           poulami-maitra-60b67174
 #xing:              username
 #instagram:          username
 #lastfm:            username
