--- a/_config.yml
+++ b/_config.yml
@@ -43,10 +43,12 @@ facebook:           ForgivenessAndLove
 github-url:         poulamim91
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           poulami-maitra-60b67174
+googlescholar:      citations?user=MlQed-MAAAAJ&hl=en
 #xing:              username
 #instagram:          username
 #lastfm:            username
 #tumblr:            username
+etsy:               pmaitra
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
