--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ googlescholar:      citations?user=MlQed-MAAAAJ&hl=en
 #tumblr:            username
 etsy:               pmaitra
 #medium:            '@username'
-#pinterest:         username
+pinterest:         username
 #foursquare:        username
 #steam:              username
 #dribbble:          username
